<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="error_while_loggin_in">Error while loggin in</string>
    <string name="registration">Registration</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="fetch_user">Fetch User</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_profile_editor">ProfileEditor</string>
</resources>